.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-k8s
  labels:
    app: nestjs-k8s
spec:
  selector:
    matchLabels:
      app: nestjs-k8s
  replicas: 2
  template:
    metadata:
      labels:
        app: nestjs-k8s
    spec:
      containers:
        - name: nestjs-k8s
          imagePullPolicy: Never
          image: sntgchns/nestjs-k8s
          ports:
            - containerPort: 3000
