.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-k8s
spec:
  selector:
    app: nestjs-k8s
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8000
  type: NodePort
